--- a/.gitignore
+++ b/.gitignore
@@ -61,9 +61,9 @@ local_settings.py
 db.sqlite3
 db.sqlite3-journal
 
-./media/ 
+./media
 */media/
-Ant-Col/
+./Ant-Col/
 # Flask stuff:
 instance/
 .webassets-cache
